test/types/tuple/const/tupleYieldConstByRef.good
tupleYieldConstByRef.chpl:6: error: Cannot set a non-const reference to a const variable.
